@@ -1,0 +1,8 @@
+EXTRA_DIST = \
+	gsysutils.h \
+	gdbusutils.h \
+	gmountspec.h \
+	gmountoperationdbus.h \
+	gmountsource.h \
+	gmounttracker.h \
+	gvfsdaemonprotocol.h
