@@ -1,0 +1,80 @@
+dnl Process this file with autoconf to produce a configure script.
+AC_PREREQ(2.53)
+
+AC_INIT(synce-gvfs, @@VERSION@@)
+AC_CONFIG_HEADERS(config.h)
+AC_CONFIG_SRCDIR(daemon/gvfsbackendsynce.c)
+AM_INIT_AUTOMAKE
+	
+AM_SANITY_CHECK
+
+AC_C_CONST
+AC_ISC_POSIX
+AC_PROG_CC
+AC_PROG_CPP
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
+AM_DISABLE_STATIC
+AM_PROG_LIBTOOL
+AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
+AM_PROG_CC_C_O
+
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.15.6 gthread-2.0 gobject-2.0 gmodule-no-export-2.0 gio-unix-2.0 gio-2.0)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
+PKG_CHECK_MODULES(DBUS, dbus-1)
+AC_SUBST(DBUS_CFLAGS)
+AC_SUBST(DBUS_LIBS)
+
+dnl **** gio module path handling ****
+giomodulesdir=`pkg-config --variable=giomoduledir gio-2.0`
+AC_SUBST(giomodulesdir)
+
+dnl **************************
+dnl *** Check for librapi2 ***
+dnl **************************
+
+dnl Check for librapi2
+PKG_CHECK_MODULES(LIBRAPI2, librapi2 >= 0.11)
+
+
+dnl ****************************
+dnl *** Checks for intltool  ***
+dnl ****************************
+
+IT_PROG_INTLTOOL([0.35.0])
+GETTEXT_PACKAGE=gvfs
+
+AC_SUBST([GETTEXT_PACKAGE])
+AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[The gettext domain name])
+AM_GLIB_GNU_GETTEXT
+
+dnl ****************************
+dnl *** Checks for gettext   ***
+dnl ****************************
+
+dnl *** disabled by now, using intltool ***
+dnl *** we'll revert when glib-gettexttize will be able
+dnl *** to manage [enconding: UTF-8] in POTIFILES.in
+
+dnl GETTEXT_PACKAGE=gvfs
+dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [The gettext domain name])
+dnl AC_SUBST(GETTEXT_PACKAGE)
+
+dnl ALL_LINGUAS=""
+
+dnl AM_GLIB_GNU_GETTEXT
+
+dnl LIBS="$LIBS $INTLLIBS"
+
+dnl AM_GLIB_DEFINE_LOCALEDIR(GVFS_LOCALEDIR)
+
+AC_OUTPUT([
+	Makefile
+	daemon/Makefile
+	common/Makefile
+	pixmaps/Makefile
+	po/Makefile.in
+])
